[package]
name = "img_bot"
version = "0.1.4"
authors = ["rwilliaise"]
license = "MIT"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "img_bot"
path = "main.rs"

[dependencies]
serenity = { version = "0.10.10", default-features = false, features = ["client", "gateway", "rustls_backend", "model", "unstable_discord_api"] }
tokio = { version = "1", features = ["full"] }
err-context = "0.1.0"
reqwest = { version = "0.11.9", features = ["deflate"] }
clap = { version = "3.0.14", features = ["derive"] }