[package]
name = "img_server"
version = "0.1.4"
authors = ["rwilliaise"]
license = "MIT"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "img_server"
path = "main.rs"

[dependencies]
actix-web = "4.0.0-beta.21"
actix-rt = "2.6.0"
shared = { path = "../shared" }
err-context = "0.1.0"
serde = "1.0.136"
image = "0.23.6"
imageproc = "0.22.0"
mime = "0.3.16"
reqwest = "0.11.9"
rusttype = "0.9.2"
uuid = { version = "1.0.0-alpha.1", features = [ "v4" ] }
