[package]
name = "img_server"
version = "0.1.5"
authors = ["rwilliaise"]
license = "MIT"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "img_server"
path = "main.rs"

[dependencies]
actix-web = "4.0.0-rc.2"
actix-rt = "2.6.0"
shared = { path = "../shared" }
err-context = "0.1.0"
serde = { version = "1.0", features = [ "derive" ] }
image = "0.23.6"
imageproc = "0.22.0"
mime = "0.3.16"
reqwest = "0.11.9"
rusttype = "0.9.2"
uuid = { version = "1.0.0-alpha.1", features = [ "v4" ] }
bytes = "1.1.0"
conv = "0.3.3"
futures = "0.3.21"
tokio = "1.16.1"